Fix typo in blog post introduction

--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -11,5 +11,5 @@ tags:
 
 Hey there! 
 
-My name is John Cordero and this is my new blog. I've wanted to creat something like this for a long time and finally found some time to do so. This blog will be used to document research projects, discuss learnings, and just talk about interesting topics (aka my off the wall musings). Thanks for joining me here and I look forward to learning with you! 
+My name is John Cordero and this is my new blog. I've wanted to create something like this for a long time and finally found some time to do so. This blog will be used to document research projects, discuss learnings, and just talk about interesting topics (aka my off the wall musings). Thanks for joining me here and I look forward to learning with you! 
 
