AI Alignment Blog first pass
Updated blog post title, date, permalink, and content to reflect new themes on AI and alignment.

--- a/_posts/2013-08-14-blog-post-2.md
+++ b/_posts/2013-08-14-blog-post-2.md
@@ -1,20 +1,23 @@
 ---
-title: 'Blog Post number 2'
-date: 2013-08-14
-permalink: /posts/2013/08/blog-post-2/
+title: 'Alignment Myth'
+date: 2026-02-05
+permalink: /posts/2026/02/Alignment Myth/
 tags:
-  - cool posts
-  - category1
-  - category2
+  - AI
+  - Technology
+  - Philosophy
+  - Opinion
 ---
 
-This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
+When ChatGPT first released to the public back in 2022 I was estatic. To many in the public, and even in the technology sphere, this was the first true demonstration of what advance machince learning or narrow artifical intelligence could become. At the time I could only see the posititives. A chatbot that could "think", conversre, and solve humanaities problems? Count me in. My mind raced with fantasies of curing cancer, solving faster than light travel, fixing climate change, eliminating class systems, and so much more. Fast forward 4 years and I realize how silly those thoughts turned out. Instead of the utopic future we were promised, all of the worst parts of AI in science fiction are coming to furition. We find ourselves in a reality where greed and power have found there way into every facet of AI. Instead of a force for good, the technology is being used in a "arms race" to make the most money or acquire the market share to starve out competeors. In my mind the only way a SuperIntelligent AI could go is the route of Terminator, I Robot, System Shock, 
 
-Headings are cool
+What is Alignment?
 ======
 
-You can have many headings
+Why is it a Myth?
 ======
+A recent video I watched by Kyle Hill said that if we gave a lion human level intelligence would it have the same goals as humans? Probably not. However, I'd go even father to say in the hundreds of thousands of years humans have been on the planet have we all had the same goals? Again, I'd say probably not. As far back as our histroy goes we have been at war with eachother, disagreeing with eachother, segragating eachother, the list goes on. Do we have pockets of alignment here and there, sure, but overall we remain divided as a species. Now we are trying to play god and create a new form of synthetic life that will be hundreds. thousands, hell many even millions of times smarter than us. How could we ever, even in our wildest dreams, hope to keep it aligned when we can't even align with eachother let alone with a lion. 
 
-Aren't headings cool?
+So What?
 ------
+Honestly I have no idea other than terminating any further true AI research for the foreseeable future. By true AI research I mean trying to find the breakthrough to General or Super Intelligence. We can keep our chatbots, image generators, etc. but anything past that should be banned globally. 
